- Bugzilla Bug (s) Resolved:
- Description:
add support for dynmaic palette expression tree support, now extended item can provide context specific expressoins  through extensions.